--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/NaCl4Ever/BriteCore-Featuretron/issues"
   },
-  "homepage": "https://github.com/NaCl4Ever/BriteCore-Featuretron#readme"
+  "homepage": "https://github.com/NaCl4Ever/BriteCore-Featuretron#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "ejs": "^2.5.1",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {}
 }
